--- a/help/index.htm
+++ b/help/index.htm
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <font size="1">$Revision: 1.6 $</font>
+          <font size="1">$Revision: 1.1 $</font>
         </h3>
       </td>
       <td width="300" align="center">
@@ -32,8 +32,6 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <a href="../repository_index.htm">STEPmod</a>
       &nbsp;|&nbsp;
       <a href="index.htm">Help index</a>
-      &nbsp;|&nbsp;
-      <a href="stylesheets.htm" target="_top">Stylesheets</a>
       ]
     </font>
   </center>
@@ -43,9 +41,22 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   <ul>
     <li>Introduction</li>
     <li><a href="releases.htm">Release Notes</a></li>
-    <li><a href="repo_dir.htm">Repository directory structure</a></li>
-    <li><a href="dtd.htm">DTDs</a></li>
-    <li><a href="repo_dir.htm">Module files</a></li>
+    <li><a href="repo_dir.htm">Repository structure</a></li>
+	<ul>
+	  <li><a href="repo_dir.htm">Repository directory structure</a></li>
+	  <li><a href="dtd.htm">DTDs</a></li>
+	  <li><a href="mod_files.htm">Module files</a></li>
+	  <li><a href="sys.htm">Hidden Module files</a></li>
+	</ul>
+    <li><a href="mod_intro.htm">Module</a></li>
+	<ul>
+	  <li><a href="mod_intro.htm">Module introduction</a></li>
+	  <li><a href="mod_creation.htm">Module creation</a></li>
+	  <li><a href="mod_doc.htm">Module documentation</a></li>
+	  <li><a href="xml_text.htm">General text XML elements</a></li>
+	  <li><a href="xml_exp.htm">EXPRESS XML elements</a></li>
+	  <li><a href="bookmarks.htm">Module HTML bookmarks</a></li>
+	</ul>
     <li><a href="stylesheets.htm">XSL stylesheets</a></li>
     <li><a href="util.htm">Utility scripts</a></li>
     </ul>
