--- a/help/util.htm
+++ b/help/util.htm
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <font size="1">$Revision: 1.6 $</font>
+          <font size="1">$Revision: 1.1 $</font>
         </h3>
       </td>
       <td width="300" align="center">
@@ -32,22 +32,123 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <a href="../repository_index.htm">STEPmod</a>
       &nbsp;|&nbsp;
       <a href="index.htm">Help index</a>
-      &nbsp;|&nbsp;
-      <a href="stylesheets.htm" target="_top">Stylesheets</a>
       ]
     </font>
   </center>
 
   <!-- Index -->
   <h2>Utility scripts</h2>
-  Several scripts have been developed that are useful when cretaing modules.
-  <h3>Creating a module</h3>
+  Several scripts have been developed that are useful when creating modules.
+  <h3><a name="create">Creating a module</a></h3>
   The script <code>utils/make_module.js</code> can be used to:
   <ul>
     <li>Convert the XML to HTML using Saxon </li>
     <li>Generate the module directory, skeleton XML files for the module,
-    the <a href="stylesheets.htm#mod_sys_dir">SYS</a> files</li> 
+    the <a href="sys.htm">SYS</a> files</li> 
   </ul>
+
+  <h3><a name="imagemap2xml">HTML image map to XML file</a></h3>
+  The script <code>utils/imagemap2xml.js</code> will convert an HTML file
+  containing a single image map into an XML file.
+
+  <pre>
+    cscript imagemap2xml.js &lt;module&gt; &lt;imagemap.html&gt; &lt;file.xml&gt; &lt;optional title&gt;
+  </pre>
+  where
+  <ul>
+    <li><tt>module</tt> the name of the module that the image file
+	should be stored in. </li>
+    <li><tt>imagemap.html</tt> the HTML file containing the image map.</li>
+    <li><tt>file.xml</tt> the generated XML file. The top element is
+	<tt><a href="xml_text.htm#imgfile">imgfile.content</a></tt>
+    </li>
+    <li><tt>optional title</tt> the title of the image.</li>
+  </ul>
+  E.g. Given the file armdiag.htm:
+  <p/>
+  <table border="1" width="500" 
+    cellspacing="0" cellpadding="3" bgcolor="#FFFFCC">
+    <tr>
+      <td width="100%"
+      bordercolor="#808080" 
+      bgcolor="#CCCCCC" 
+      valign="top" align="left">
+      <tt><b>armdiag.htm</b></tt>
+      </td>
+    </tr>
+    <tr>
+      <td width="100%" bordercolor="#808080" valign="top" align="left">
+<pre>
+&lt;HTML&gt;
+  &lt;HEAD&gt;
+    &lt;META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=windows-1252"&gt;
+    &lt;TITLE&gt;application module: Work order ARM EXPRESS-G Diagram 1&lt;/TITLE&gt;
+  &lt;/HEAD&gt;
+  &lt;BODY bgcolor="#FFFFFF" link="#0000FF" vlink="#800080"&gt;
+    &lt;H3 ALIGN="center"&gt;
+     application module: Work order ARM &lt;br&gt;
+     Figure C.1 - ARM EXPRESS-G diagram 1 of 1
+   &lt;/H3&gt;
+  &lt;img src="arm.gif" width="1080" height="810" border="0" alt="" usemap="#arm"&gt;
+    &lt;map name="arm"&gt;
+     &lt;area alt="" 
+       coords="12,120,220,173"
+       href="../../pdm/product_version/armdiag.html#product_version"
+       shape="RECT"&gt;
+     &lt;area alt="" 
+       coords="11,192,277,245"
+       href="../../pdm/product_view_definition_structure/armdiag.html#view_definition_relationship"
+       shape="RECT"&gt;
+     &lt;/map&gt;
+  &lt;/BODY&gt;
+&lt;/HTML&gt;
+</pre>
+      </td>
+    </tr>
+  </table>
+
+  <pre>
+  cscript imagemap2xml.js person ../data/modules/foo/armdiag.html armdiag.xml "the title"
+  </pre>
+  will generate the file <tt>../data/modules/person/armdiag.xml</tt>
+  
+  <table border="1" width="500" 
+    cellspacing="0" cellpadding="3" bgcolor="#FFFFCC">
+    <tr>
+      <td width="100%"
+      bordercolor="#808080" 
+      bgcolor="#CCCCCC" 
+      valign="top" align="left">
+      <tt><b>armdiag.xml</b></tt>
+      </td>
+    </tr>
+    <tr>
+      <td width="100%" bordercolor="#808080" valign="top" align="left">
+<pre>
+&lt;?xml version="1.0"?&gt;
+&lt;?xml-stylesheet type="text/xsl" href="../../../xsl/imgfile.xsl"?&gt;
+&lt;!DOCTYPE imgfile.content SYSTEM "../../../dtd/text.ent"&gt;
+&lt;imgfile.content
+  module="person"
+  title="the title"&gt;
+  &lt;img
+    src="arm.gif"&gt;
+    &lt;img.area
+      shape="RECT"
+      coords="12,120,220,173"
+      href="../../pdm/product_version/armdiag.html#product_version"/&gt;
+    &lt;img.area
+      shape="RECT"
+      coords="11,192,277,245"
+      href="../../pdm/product_view_definition_structure/armdiag.html#view_definition_relationship"/&gt;
+  &lt;/img&gt;
+&lt;/imgfile.content&gt;
+      
+</pre>
+      </td>
+    </tr>
+  </table>
+  
   <h3>EXPRESS to XML</h3>
   The script <code>utils/express2xml.js</code> will convert EXPRESS into XML.
   </BODY>
