--- a/help/dtd.htm
+++ b/help/dtd.htm
@@ -16,11 +16,11 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <font size="1">$Revision: 1.6 $</font>
+          <font size="1">$Revision: 1.1 $</font>
         </h3>
       </td>
       <td width="300" align="center">
-        <h3 align="left">Module directory structure</h3>
+        <h3 align="left">Module repository DTDs</h3>
           
       </td>
     </tr>    
@@ -32,8 +32,6 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <a href="../repository_index.htm">STEPmod</a>
       &nbsp;|&nbsp;
       <a href="index.htm">Help index</a>
-      &nbsp;|&nbsp;
-      <a href="stylesheets.htm" target="_top">Stylesheets</a>
       ]
     </font>
   </center>
@@ -44,31 +42,31 @@ The following DTDs are used in the repository:
 <dl>
   <dt><code><b>dtd/module.dtd</b></code></dt>
   <dd>
-    The DTD's system idenfifier. The root element is "module".
-  </dd>
+    The DTD's system identifier. The root element is "module".
+  </dd><p/>
 
   <dt><code><b>dtd/mapping.ent</b></code></dt>
   <dd>
     Markup declarations for the units of functionality, application
     objects, and mapping specification.
-  </dd>
+  </dd><p/>
 
   <dt><code><b>dtd/express.dtd</b></code></dt>
   <dd>
     Markup declarations for EXPRESS code.
-  </dd>
+  </dd><p/>
 
   <dt><code><b>dtd/refs-and-defs.ent</b></code></dt>
   <dd>
     Markup declarations for normative references, terms, definitions,
     and abbreviations.
-  </dd>
+  </dd><p/>
 
   <dt><code><b>dtd/text.ent</b></code></dt>
   <dd>
     Markup declarations for descriptive text, notes, examples, figures,
     etcetera.
-  </dd>
+  </dd><p/>
 
 </dl>
 </BODY>
