--- a/help/stylesheets.htm
+++ b/help/stylesheets.htm
@@ -14,11 +14,11 @@
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <font size="1">$Revision: 1.6 $</font>
+          <font size="1">$Revision: 1.1 $</font>
         </h3>
       </td>
       <td width="300" align="center">
-        <h3 align="left">Stylesheets</h3>
+        <h3 align="left">XSL Stylesheets</h3>
           
       </td>
     </tr>    
@@ -30,101 +30,13 @@
       <a href="../repository_index.htm">STEPmod</a>
       &nbsp;|&nbsp;
       <a href="index.htm">Help index</a>
-      &nbsp;|&nbsp;
-      <a href="stylesheets.htm" target="_top">Stylesheets</a>
       ]
     </font>
   </center>
 
 <h2>
-  <a name="mod_sys_dir">Module SYS directory</a>
+  <a name="mod_sys_dir">XSL Stylesheets</a>
 </h2>
-This directory contains XML files that are automatically generated when a
-module is created. Each XML file corresponds to a clause of the module.
-<dl>
-  <dt><code><b>1_scope.xml</b></code></dt>
-  <dd>
-  </dd><p/>
-
-  <dt><code><b>2_refs.xml</b></code></dt>
-  <dd>
-  </dd><p/>
-
-  <dt><code><b>3_defs.xml</b></code></dt>
-  <dd>
-  </dd><p/>
-
-  <dt><code><b>4_info_reqs.xml</b></code></dt>
-  <dd>
-  </dd><p/>
-
-  <dt><code><b>5_mapping.xml</b></code></dt>
-  <dd>
-  </dd><p/>
-
-  <dt><code><b>5_mim.xml</b></code></dt>
-  <dd>
-  </dd><p/>
-
-  <dt><code><b>a_short_names.xml</b></code></dt>
-  <dd>
-  </dd><p/>
-
-  <dt><code><b>b_obj_reg.xml</b></code></dt>
-  <dd>
-  </dd><p/>
-
-  <dt><code><b>biblio.xml</b></code></dt>
-  <dd>
-  </dd><p/>
-
-  <dt><code><b>c_arm_expg.xml</b></code></dt>
-  <dd>
-  </dd><p/>
-
-  <dt><code><b>cover.xml</b></code></dt>
-  <dd>
-  </dd><p/>
-
-  <dt><code><b>d_mim_expg.xml</b></code></dt>
-  <dd>
-  </dd><p/>
-
-  <dt><code><b>e_exp.xml</b></code></dt>
-  <dd>
-  </dd><p/>
-
-  <dt><code><b>e_exp_arm.xml</b></code></dt>
-  <dd>
-  </dd><p/>
-
-  <dt><code><b>e_exp_arm_lf.xml</b></code></dt>
-  <dd>
-  </dd><p/>
-
-  <dt><code><b>e_exp_mim.xml</b></code></dt>
-  <dd>
-  </dd><p/>
-
-  <dt><code><b>e_exp_mim_lf.xml</b></code></dt>
-  <dd>
-  </dd><p/>
-
-  <dt><code><b>f_guide.xml</b></code></dt>
-  <dd>
-  </dd><p/>
-
-  <dt><code><b>foreword.xml</b></code></dt>
-  <dd>
-  </dd><p/>
-
-  <dt><code><b>introduction.xml</b></code></dt>
-  <dd>
-  </dd><p/>
-
-  <dt><code><b>main.xml</b></code></dt>
-  <dd>
-</dl>
 
 </BODY>
 </HTML>
