--- a/help/mod_creation.htm
+++ b/help/mod_creation.htm
@@ -44,12 +44,34 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 The following stages are required in the creation of a module:
 <ul>
   <li>
-      First create the <a href="mod_files.htm">directory and files</a> for
-      the module using the JScript <tt><a
-      href="util.htm#create">make_module</a></tt>. 
+      Create the <a href="mod_files.htm">directory and files</a> for
+      the module using the JScript
+      <code><a href="util.htm#create">mkmodule</a></code>. 
   </li>
   <li>
-      Create the ARM and MIM EXPRESS.
+      Create the ARM, the MIM short and long form EXPRESS files storing
+      them in the module directory.<br/>
+      The ARM EXPRESS should be called <code>arm.exp</code>, <br/>
+      the MIM short form EXPRESS should be called <code>mim.exp</code>,<br/>
+      the MIM long form EXPRESS should be called <code>mim_lf.exp</code>
+      as described in  <a href="mod_files.htm">"Module Files"</a>
+  </li>
+  <li>
+      Convert the EXPRESS to XML using the JScript
+      <code><a href="util.htm#express2xml">express2xml</a></code>.
+  </li>
+  <li>
+      Document the module, i.e. edit the file <code>module.xml</code> as
+      described in <a href="mod_doc.htm">"Module documentation"</a>
+  </li>
+  <li>
+      Create the EXPRESS-G diagrams. If these are created as HTML imagemap,
+      these should be converted to XML using the JScript
+      <code><a href="util.htm#imagemap2xml">imagemap2xml</a></code>.
+  </li>
+  <li>
+      Convert the XML to HTML using the JScript
+      <code><a href="util.htm#xml2html">xml2html</a></code>.
   </li>
 </ul>
 
