--- a/help/util.htm
+++ b/help/util.htm
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <font size="1">$Revision: 1.2 $</font>
+          <font size="1">$Revision: 1.3 $</font>
         </h3>
       </td>
       <td width="300" align="center">
@@ -45,6 +45,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
     <li><a href="#xmlhtml">Generating HTML</a></li>
     <li><a href="#imagemap2xml">HTML image map to XML file</a></li>
     <li><a href="#express2xml">EXPRESS to XML</a></li>
+    <li><a href="#splitresource">Split integrated resource EXPRESS to schemas</a></li>
   </ul>
   
   <h3><a name="create">Creating a module</a></h3>
@@ -324,8 +325,20 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   where <code>&lt;express.exp&gt;</code> is the name of the EXPRESS file.
   <p>The XML file will be stored in the same location as EXPRESS file with
   the suffix .exp replaced with .xml.</p>
-
-
   </p>
+
+  <h3><a name="splitresource">Split integrated resource EXPRESS to schemas</a></h3>
+The Jscript <code>utils/splitresource.js</code> will split an EXPRESS
+file into its constituent schemas. 
+A directory will be created for each schema with the same name as the
+schema. The EXPRESS for the schema will be stored in the schema
+directory in a file with the same name as the schema.  
+  <blockquote>
+  <code>
+  cscript splitresource.js &lt;express.exp&gt;
+  </code>
+  </blockquote>
+  where <code>&lt;express.exp&gt;</code> is the name of the EXPRESS file
+containing multiple schemas. 
   </BODY>
 </HTML>
