--- a/help/bookmarks.htm
+++ b/help/bookmarks.htm
@@ -44,6 +44,11 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 	<ul>
 	  <li><a href="#xmlexpref">EXPRESS reference</a>
 	  <li><a href="#xmlmodref">Module reference</a></li>
+	      <ul>
+		<li><a href="#section">Module clauses, introduction
+		    etc.</a>
+		<li><a href="#figure">Figures, notes, examples.</a>
+	      </ul>
 	</ul>
     <li><a href="#html_ref">HTML bookmarks</a></li>
 	<ul>
@@ -203,7 +208,10 @@ Resource. It is a structured string with the following format:
       </td>
     </tr>
   </table>
-
+  <p>
+  A complete example is given in
+  <a href="../data/modules/example/module.xml">data/modules/example/module.xml</a>
+  </p>
 
   <h4>Example</h4>
      A reference to the EXPRESS listing of the attribute "name", on the 
@@ -241,6 +249,10 @@ Resource. It is a structured string with the following format:
       </td>
     </tr>
   </table>
+  <p>
+  A complete example is given in
+  <a href="../data/modules/example/module.xml">data/modules/example/module.xml</a>
+  </p>
 
   <h4>Example</h4>
      A reference to the MIM description of the EXPRESS type "action_date_item",
@@ -278,6 +290,10 @@ Resource. It is a structured string with the following format:
       </td>
     </tr>
   </table>
+  <p>
+  A complete example is given in
+  <a href="../data/modules/example/module.xml">data/modules/example/module.xml</a>
+  </p>
 
 
   <h4>Example</h4>
@@ -316,6 +332,10 @@ Resource. It is a structured string with the following format:
       </td>
     </tr>
   </table>
+  <p>
+  A complete example is given in
+  <a href="../data/modules/example/module.xml">data/modules/example/module.xml</a>
+  </p>
 
   <h4>Example</h4>
      A reference to the EXPRESS action "action", 
@@ -352,6 +372,10 @@ Resource. It is a structured string with the following format:
       </td>
     </tr>
   </table>
+  <p>
+  A complete example is given in
+  <a href="../data/modules/example/module.xml">data/modules/example/module.xml</a>
+  </p>
 
   
 <a name="xmlmodref"><h4>Module reference</h4></a>
@@ -390,7 +414,7 @@ Resource. It is a structured string with the following format:
     <dt><tt>&lt;module&gt;</tt></dt>
     <dd>is the name of the module.</dd>
 
-    <dt><tt>&lt;section&gt;</tt></dt>
+    <dt><tt>&lt;<a name="section">section</a>&gt;</tt></dt>
     <dd>identifies the section in the module document.</dd><p/>
 	<dl>
 	  <dt><tt>introduction</tt></dt>
@@ -469,7 +493,7 @@ Resource. It is a structured string with the following format:
 	  <dd>The usage guide section.</dd></p>
 	</dl>
 
-    <dt><tt>&lt;construct&gt;</tt></dt>
+    <dt><tt>&lt;<a name="figure">construct</a>&gt;</tt></dt>
     <dd>is optional and indentifies whether a figure, table, note or
 	example is being referenced,</dd><p/>
 	<dl>
@@ -530,6 +554,10 @@ Resource. It is a structured string with the following format:
       </td>
     </tr>
   </table>
+  <p>
+  A complete example is given in
+  <a href="../data/modules/example/module.xml">data/modules/example/module.xml</a>
+  </p>
 
   <h4>Example</h4>
   <p>
@@ -565,7 +593,11 @@ Resource. It is a structured string with the following format:
       </td>
     </tr>
   </table>
-  
+   <p>
+  A complete example is given in
+  <a href="../data/modules/example/module.xml">data/modules/example/module.xml</a>
+  </p>
+ 
 <a name="html_ref"><h3>HTML bookmarks</h3></a>
   The XSL stylesheets generate the HTML anchors for the major sections of
   the module document and the EXPRESS constructs.
