--- a/help/mod_creation.htm
+++ b/help/mod_creation.htm
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <font size="1">$Revision: 1.1 $</font>
+          <font size="1">$Revision: 1.2 $</font>
         </h3>
       </td>
       <td width="300" align="center">
@@ -47,6 +47,10 @@ The following stages are required in the creation of a module:
       Create the <a href="mod_files.htm">directory and files</a> for
       the module using the JScript
       <code><a href="util.htm#create">mkmodule</a></code>. 
+  </li>
+  <li>
+      Add the new module to the index of modules:
+      <a href="../repository_index.htm">repository_index.xml</a>
   </li>
   <li>
       Create the ARM, the MIM short and long form EXPRESS files storing
