--- a/help/mod_doc.htm
+++ b/help/mod_doc.htm
@@ -89,9 +89,9 @@ Where:
     <li><tt>part</tt> is the ISO 10303 part number.</li>
     <li><tt>version</tt> is the SC4 N-number</li>
     <li><tt>rcs.date</tt> Date attribute for source control software like
-	RCS or CVS. E.g. <tt>$Date:&nbsp;$</tt></li>
+	RCS or CVS. E.g. <tt>$Date: 2001/12/28 10:16:03 $</tt></li>
     <li><tt>rcs.revision</tt>Revision attribute for source control software
-	like RCS or CVS. E.g. <tt>$Revision:&nbsp;$</tt></li>
+	like RCS or CVS. E.g. <tt>$Revision: 1.1 $</tt></li>
   </ul>
 
 
@@ -140,9 +140,8 @@ Where:
   <tt>&lt;li&gt;</tt> element.
   
   <h3><a name="normrefs">Normrefs (optional)</a></h3>
-  The element <tt>&lt;normrefs&gt;</tt> is defined by:
-  <pre>
-  </pre>
+  The element <tt>&lt;normrefs&gt;</tt> is used to define normative
+  references. For details, see: "<a href="normrefs.htm#normrefs">Normative references</a>"
 
   <h3><a name="definition">Definition (optional)</a></h3>
   The element <tt>&lt;definition&gt;</tt> is defined by:
