--- a/help/index.htm
+++ b/help/index.htm
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <font size="1">$Revision: 1.1 $</font>
+          <font size="1">$Revision: 1.2 $</font>
         </h3>
       </td>
       <td width="300" align="center">
@@ -53,9 +53,51 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 	  <li><a href="mod_intro.htm">Module introduction</a></li>
 	  <li><a href="mod_creation.htm">Module creation</a></li>
 	  <li><a href="mod_doc.htm">Module documentation</a></li>
+	      <ul>
+		<li><a href="mod_doc.htm#module">Module</a></li>
+		<li><a href="mod_doc.htm#keywords">Keywords</a></li>
+		<li><a href="mod_doc.htm#contacts">Contacts</a></li>
+		<li><a href="mod_doc.htm#purpose">Purpose</a></li>
+		<li><a href="mod_doc.htm#inscope">Inscope</a></li>
+		<li><a href="mod_doc.htm#outscope">Outscope</a></li>
+		<li><a href="normrefs.htm">Normative references, terms,
+		    definitions, abbreviations</a></li>
+		    <ul>
+		      <li><a href="normrefs.htm#normrefs">Normrefs</a></li>
+		      <li><a href="normrefs.htm#terms">Term</a></li>
+		      <li><a href="normrefs.htm#definitions">Definition</a></li>
+		      <li><a
+			  href="normrefs.htm#abbreviations">Abbreviations</a></li>
+		    </ul>
+		<li><a href="mod_doc.htm#arm">ARM</a></li>
+		<li><a href="mod_doc.htm#arm_uof">ARM UOF</a></li>
+		<li><a href="mod_doc.htm#expg">EXPRESS-G diagrams</a></li>
+		<li><a href="mod_doc.htm#mapping">Mapping_table</a></li>
+		<li><a href="mod_doc.htm#mim">Mim</a></li>
+		<li><a href="mod_doc.htm#usage">Usage_guide</a></li>
+		<li><a href="mod_doc.htm#bibliography">Bibliography</a></li>
+	      </ul>
 	  <li><a href="xml_text.htm">General text XML elements</a></li>
 	  <li><a href="xml_exp.htm">EXPRESS XML elements</a></li>
 	  <li><a href="bookmarks.htm">Module HTML bookmarks</a></li>
+	      <ul>
+		<li><a href="bookmarks.htm#xml_ref">XML referencing</a></li>
+		    <ul>
+		      <li><a href="bookmarks.htm#xmlexpref">EXPRESS reference</a>
+		      <li><a href="bookmarks.htm#xmlmodref">Module reference</a></li>
+			  <ul>
+			    <li><a href="bookmarks.htm#section">Module clauses, introduction
+				etc.</a>
+			    <li><a href="bookmarks.htm#figure">Figures, notes, examples.</a>
+			  </ul>
+		    </ul>
+		<li><a href="bookmarks.htm#html_ref">HTML bookmarks</a></li>
+		    <ul>
+		      <li><a href="bookmarks.htm#modhtml">Module document HTML bookmarks</a></li>
+		      <li><a href="bookmarks.htm#fightml">Figures, notes etc HTML bookmarks</a></li>
+		      <li><a href="bookmarks.htm#exphtml">EXPRESS HTML bookmarks</a></li>
+		    </ul>
+	      </ul>
 	</ul>
     <li><a href="stylesheets.htm">XSL stylesheets</a></li>
     <li><a href="util.htm">Utility scripts</a></li>
@@ -63,3 +105,6 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   </ul>
   </BODY>
 </HTML>
+
+
+
