--- a/help/releases.htm
+++ b/help/releases.htm
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <font size="1">$Revision: 1.1 $</font>
+          <font size="1">$Revision: 1.2 $</font>
         </h3>
       </td>
       <td width="300" align="center">
@@ -39,6 +39,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   <!-- Index -->
   <h2>Release notes</h2>
   <ul>
+    <li><a href="../releasenotes/release_20020103.txt">release_20020103.txt</a></li>
     <li><a href="../releasenotes/release_20011122.txt">release_20011122.txt</a></li>
     </ul>
   </ul>
