--- a/help/index.htm
+++ b/help/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: -->
+<!-- $Id: $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <font size="1">$Revision: 1.2 $</font>
+          <font size="1">$Revision: 1.3 $</font>
         </h3>
       </td>
       <td width="300" align="center">
@@ -101,6 +101,14 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 	</ul>
     <li><a href="stylesheets.htm">XSL stylesheets</a></li>
     <li><a href="util.htm">Utility scripts</a></li>
+	<ul>
+	  <li><a href="utils.htm#create">Creating a module</a></li>
+	  <li><a href="utils.htm#xmlhtml">Generating HTML</a></li>
+	  <li><a href="utils.htm#imagemap2xml">HTML image map to XML file</a></li>
+	  <li><a href="utils.htm#express2xml">EXPRESS to XML</a></li>
+	  <li><a href="utils.htm#splitresource">Split integrated resource EXPRESS to schemas</a></li>
+  </ul>
+
     </ul>
   </ul>
   </BODY>
