--- a/help/releases.htm
+++ b/help/releases.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: $ -->
+<!-- $Id: releases.htm,v 1.4 2002/01/03 10:31:01 robbod Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <font size="1">$Revision: 1.3 $</font>
+          <font size="1">$Revision: 1.4 $</font>
         </h3>
       </td>
       <td width="300" align="center">
@@ -39,8 +39,15 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   <!-- Index -->
   <h2>Release notes</h2>
   <ul>
-    <li><a href="../releasenotes/release_20020103.txt">release_20020103.txt</a></li>
-    <li><a href="../releasenotes/release_20011122.txt">release_20011122.txt</a></li>
+    <li>
+	<a href="../releasenotes/release_20020107.txt">release_20020107.txt</a>
+    </li>
+    <li>
+	<a href="../releasenotes/release_20020103.txt">release_20020103.txt</a>
+    </li>
+    <li>
+	<a href="../releasenotes/release_20011122.txt">release_20011122.txt</a>
+    </li>
     </ul>
   </ul>
   </BODY>
