--- a/help/mod_creation.htm
+++ b/help/mod_creation.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: $ -->
+<!-- $Id: mod_creation.htm,v 1.4 2002/01/03 10:31:01 robbod Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <font size="1">$Revision: 1.3 $</font>
+          <font size="1">$Revision: 1.4 $</font>
         </h3>
       </td>
       <td width="300" align="center">
@@ -29,7 +29,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   <center>
     <font size="2">
       [
-      <a href="../repository_index.htm">STEPmod</a>
+      <a href="../repository_index.xml">STEPmod</a>
       &nbsp;|&nbsp;
       <a href="index.htm">Help index</a>
       ]
