--- a/help/mod_doc.htm
+++ b/help/mod_doc.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: mod_doc.htm,v 1.3 2002/01/03 10:31:01 robbod Exp $ -->
+<!-- $Id: mod_doc.htm,v 1.4 2002/01/16 11:24:39 robbod Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <font size="1">$Revision: 1.3 $</font>
+          <font size="1">$Revision: 1.4 $</font>
         </h3>
       </td>
       <td width="300" align="center">
@@ -29,7 +29,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   <center>
     <font size="2">
       [
-      <a href="../repository_index.htm">STEPmod</a>
+      <a href="../repository_index.xml">STEPmod</a>
       &nbsp;|&nbsp;
       <a href="index.htm">Help index</a>
       ]
@@ -89,9 +89,9 @@ Where:
     <li><tt>part</tt> is the ISO 10303 part number.</li>
     <li><tt>version</tt> is the SC4 N-number</li>
     <li><tt>rcs.date</tt> Date attribute for source control software like
-	RCS or CVS. E.g. <tt>$Date: 2002/01/03 10:31:01 $</tt></li>
+	RCS or CVS. E.g. <tt>$Date: 2002/01/16 11:24:39 $</tt></li>
     <li><tt>rcs.revision</tt>Revision attribute for source control software
-	like RCS or CVS. E.g. <tt>$Revision: 1.3 $</tt></li>
+	like RCS or CVS. E.g. <tt>$Revision: 1.4 $</tt></li>
   </ul>
 
 
