--- a/help/mod_doc.htm
+++ b/help/mod_doc.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: mod_doc.htm,v 1.4 2002/01/16 11:24:39 robbod Exp $ -->
+<!-- $Id: mod_doc.htm,v 1.5 2002/01/16 15:37:03 robbod Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <font size="1">$Revision: 1.4 $</font>
+          <font size="1">$Revision: 1.5 $</font>
         </h3>
       </td>
       <td width="300" align="center">
@@ -77,21 +77,34 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
              name       NMTOKEN                            #REQUIRED
              part       NMTOKEN                            #REQUIRED
              version    NMTOKEN                            #REQUIRED
-             status     (CD-TS | TS)                       "CD-TS"
-             iim        (business | product | properties |
-                        representation | presentation | assignments |
-                        fundamentals | industry)           #REQUIRED 
+             wg.number  NMTOKEN                            #REQUIRED
+             status  (CD | FDIS | DIS | IS | CD-TS | TS | WD) "CD-TS"
+             publication.year CDATA                        #REQUIRED
+             published (y | n)                             "y"
+             language (E)                                  "E"
              rcs.date CDATA                                #REQUIRED 
              rcs.revision CDATA                            #REQUIRED&gt;
 </pre>
 Where:
   <ul>
     <li><tt>part</tt> is the ISO 10303 part number.</li>
-    <li><tt>version</tt> is the SC4 N-number</li>
+    <li>
+	<tt>version</tt> is the version of the model,
+	<dl> 
+	  <dt>1 the first edition,</dt>
+          <dt>2 for a second edition or Tech Corr against 1, etc.</dt>
+        </dl>
+      </li>
+    <li><tt>wg.number</tt> is the SC4 N-number or document number.</li>
+    <li><tt>status</tt> the ISO status</li>
+    <li><tt>publication.year</tt></li>
+    <li><tt>published</tt> y if the module has been published as an
+    ISO standard</li>
+    <li><tt>language</tt> the language of the standard. Defaults to E - English</li>
     <li><tt>rcs.date</tt> Date attribute for source control software like
-	RCS or CVS. E.g. <tt>$Date: 2002/01/16 11:24:39 $</tt></li>
+	RCS or CVS. E.g. <tt>$Date: 2002/01/16 15:37:03 $</tt></li>
     <li><tt>rcs.revision</tt>Revision attribute for source control software
-	like RCS or CVS. E.g. <tt>$Revision: 1.4 $</tt></li>
+	like RCS or CVS. E.g. <tt>$Revision: 1.5 $</tt></li>
   </ul>
 
 
