Documented interactive mkmodule

--- a/help/util.htm
+++ b/help/util.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: util.htm,v 1.5 2002/01/03 10:31:01 robbod Exp $ -->
+<!-- $Id: util.htm,v 1.6 2002/01/16 15:37:03 robbod Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <font size="1">$Revision: 1.5 $</font>
+          <font size="1">$Revision: 1.6 $</font>
         </h3>
       </td>
       <td width="300" align="center">
@@ -49,16 +49,27 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   </ul>
   
   <h3><a name="create">Creating a module</a></h3>
-  The Jscript <code>utils/mkmodule.js</code> should be used when
-  creating a new module. It will generate:
-  <ul>
+  The Windows Script File <code>utils/mkmodule.wsf</code> should be used
+  when creating a new module. It will generate:
+    <ul>
     <li>the module directory,</li>
     <li>skeleton <a href="mod_files.htm">XML files</a> for the module,</li>
     <li>the <a href="sys.htm">SYS</a> files.</li> 
   </ul>
   <p>
   Before running the global variable
-  <code>stepmodHome</code> must be set in the script.
+  <code>stepmodHome</code> must be set in the Jscript <code>utils/mkmodule.js</code>.
+
+  </p>
+  To create a new module, run (double click on it):
+  <blockquote>
+  <code>
+    utils/mkmodule.wsf
+  </code>
+  </blockquote>
+  It will prompt for the name of the module.
+  
+  <!--
   </p>
   To create a new module, run:
   <blockquote>
@@ -67,7 +78,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   </code>
   </blockquote>
   where <code>&lt;module&gt;</code> is the name of the new module.
-
+ -->
   
   <h3><a name="xmlhtml">Generating HTML</a></h3>
   The Jscript <code>utils/xml2html.js</code> can be used to convert the XML
