--- a/help/releases.htm
+++ b/help/releases.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: releases.htm,v 1.7 2002/01/16 15:37:03 robbod Exp $ -->
+<!-- $Id: releases.htm,v 1.8 2002/02/14 07:12:55 robbod Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <font size="1">$Revision: 1.7 $</font>
+          <font size="1">$Revision: 1.8 $</font>
         </h3>
       </td>
       <td width="300" align="center">
@@ -39,6 +39,9 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   <!-- Index -->
   <h2>Release notes</h2>
   <ul>
+    <li>
+	<a href="../releasenotes/release_20020224.txt">release_20020224.txt</a>
+    </li>
     <li>
 	<a href="../releasenotes/release_20020214.txt">release_20020214.txt</a>
     </li>
