--- a/help/mod_doc.htm
+++ b/help/mod_doc.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: mod_doc.htm,v 1.6 2002/01/28 11:10:38 robbod Exp $ -->
+<!-- $Id: mod_doc.htm,v 1.7 2002/02/08 10:25:31 robbod Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <font size="1">$Revision: 1.6 $</font>
+          <font size="1">$Revision: 1.7 $</font>
         </h3>
       </td>
       <td width="300" align="center">
@@ -29,7 +29,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   <center>
     <font size="2">
       [
-      <a href="../repository_index.xml">STEPmod</a>
+      <a href="../repository_index.htm">STEPmod</a>
       &nbsp;|&nbsp;
       <a href="index.htm">Help index</a>
       ]
@@ -102,9 +102,9 @@ Where:
     ISO standard</li>
     <li><tt>language</tt> the language of the standard. Defaults to E - English</li>
     <li><tt>rcs.date</tt> Date attribute for source control software like
-	RCS or CVS. E.g. <tt>$Date: 2002/01/28 11:10:38 $</tt></li>
+	RCS or CVS. E.g. <tt>$Date: 2002/02/08 10:25:31 $</tt></li>
     <li><tt>rcs.revision</tt>Revision attribute for source control software
-	like RCS or CVS. E.g. <tt>$Revision: 1.6 $</tt></li>
+	like RCS or CVS. E.g. <tt>$Revision: 1.7 $</tt></li>
   </ul>
 
 
