--- a/help/sys.htm
+++ b/help/sys.htm
@@ -1,6 +1,6 @@
 <!DOCTYPE html
   PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: sys.htm,v 1.2 2002/01/03 10:31:01 robbod Exp $ -->
+<!-- $Id: sys.htm,v 1.3 2002/01/16 15:37:03 robbod Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -14,7 +14,7 @@
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <font size="1">$Revision: 1.2 $</font>
+          <font size="1">$Revision: 1.3 $</font>
         </h3>
       </td>
       <td width="300" align="center">
@@ -27,7 +27,7 @@
   <center>
     <font size="2">
       [
-      <a href="../repository_index.xml">STEPmod</a>
+      <a href="../repository_index.htm">STEPmod</a>
       &nbsp;|&nbsp;
       <a href="index.htm">Help index</a>
       ]
