Replaced font with <small>

--- a/help/util.htm
+++ b/help/util.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: util.htm,v 1.7 2002/02/15 12:23:11 robbod Exp $ -->
+<!-- $Id: util.htm,v 1.8 2002/02/25 17:14:50 robbod Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <font size="1">$Revision: 1.7 $</font>
+          <small>$Revision: 1.8 $</small>
         </h3>
       </td>
       <td width="300" align="center">
@@ -27,13 +27,13 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   </table>
   <hr/>
   <center>
-    <font size="2">
+    <small>
       [
       <a href="../repository_index.htm">STEPmod</a>
       &nbsp;|&nbsp;
       <a href="index.htm">Help index</a>
       ]
-    </font>
+    </small>
   </center>
 
   <!-- Index -->
