--- a/help/stylesheets.htm
+++ b/help/stylesheets.htm
@@ -1,6 +1,6 @@
 <!DOCTYPE html
   PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: stylesheets.htm,v 1.4 2002/01/16 15:37:03 robbod Exp $ -->
+<!-- $Id: stylesheets.htm,v 1.5 2002/02/25 17:14:50 robbod Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -14,7 +14,7 @@
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <font size="1">$Revision: 1.4 $</font>
+          <small>$Revision: 1.5 $</small>
         </h3>
       </td>
       <td width="300" align="center">
@@ -25,13 +25,13 @@
   </table>
   <hr/>
   <center>
-    <font size="2">
+    <small>
       [
       <a href="../repository_index.htm">STEPmod</a>
       &nbsp;|&nbsp;
       <a href="index.htm">Help index</a>
       ]
-    </font>
+    </small>
   </center>
 
 <h2>
