Added XML to index

--- a/help/bookmarks.htm
+++ b/help/bookmarks.htm
@@ -1,14 +1,14 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: bookmarks.htm,v 1.5 2002/02/25 17:14:50 robbod Exp $ -->
+<!-- $Id: bookmarks.htm,v 1.6 2002/03/04 08:44:05 robbod Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <TITLE>Module HTML Bookmarks</TITLE>
 <link rel="stylesheet" type="text/css" href="../css/stepmod.css">
 </HEAD>
-<BODY>
+<body>
 
   <!-- table of contents -->
   <table border="0" cellspacing="0" cellpadding="0">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <small>$Revision: 1.5 $</small>
+          <small>$Revision: 1.6 $</small>
         </h3>
       </td>
       <td width="300" align="center">
@@ -29,7 +29,9 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   <center>
     <small>
       [
-      <a href="../repository_index.htm">STEPmod</a>
+      <a href="../repository_index.htm">STEPmod HTML</a>
+      &nbsp;|&nbsp;
+      <a href="../repository_index.xml">STEPmod XML</a>
       &nbsp;|&nbsp;
       <a href="index.htm">Help index</a>
       ]
