--- a/help/index.htm
+++ b/help/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: index.htm,v 1.7 2002/02/25 17:14:50 robbod Exp $ -->
+<!-- $Id: index.htm,v 1.8 2002/03/04 08:44:05 robbod Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <small>$Revision: 1.7 $</small>
+          <small>$Revision: 1.8 $</small>
         </h3>
       </td>
       <td width="300" align="center">
@@ -29,9 +29,11 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   <center>
     <small>
       [
-      <a href="../repository_index.htm">STEPmod</a>
+      <a href="../repository_index.htm">STEPmod HTML</a>
       &nbsp;|&nbsp;
-      <a href="index.htm">Help index</a>
+      <a href="../repository_index.xml">STEPmod XML</a>
+      &nbsp;|&nbsp;
+  <a href="index.htm">Help index</a>
       ]
     </small>
   </center>
@@ -39,7 +41,9 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   <!-- Index -->
   <h2>STEP modules web site</h2>
   <ul>
-    <li>Introduction</li>
+    <li><a href="introduction.htm">Introduction</a></li>
+    <li><a href="sf.htm">Getting started with Sourceforge and CVS</a></li>
+    <li><a href="cvs.htm">Hints and tips for CVS</a></li>	
     <li><a href="releases.htm">Release Notes</a></li>
     <li><a href="repo_dir.htm">Repository structure</a></li>
 	<ul>
