--- a/help/mod_doc.htm
+++ b/help/mod_doc.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: mod_doc.htm,v 1.8 2002/02/25 17:14:50 robbod Exp $ -->
+<!-- $Id: mod_doc.htm,v 1.9 2002/03/04 08:44:05 robbod Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <small>$Revision: 1.8 $</small>
+          <small>$Revision: 1.9 $</small>
         </h3>
       </td>
       <td width="300" align="center">
@@ -29,7 +29,9 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   <center>
     <small>
       [
-      <a href="../repository_index.htm">STEPmod</a>
+      <a href="../repository_index.htm">STEPmod HTML</a>
+      &nbsp;|&nbsp;
+      <a href="../repository_index.xml">STEPmod XML</a>
       &nbsp;|&nbsp;
       <a href="index.htm">Help index</a>
       ]
@@ -102,9 +104,9 @@ Where:
     ISO standard</li>
     <li><tt>language</tt> the language of the standard. Defaults to E - English</li>
     <li><tt>rcs.date</tt> Date attribute for source control software like
-	RCS or CVS. E.g. <tt>$Date: 2002/02/25 17:14:50 $</tt></li>
+	RCS or CVS. E.g. <tt>$Date: 2002/03/04 08:44:05 $</tt></li>
     <li><tt>rcs.revision</tt>Revision attribute for source control software
-	like RCS or CVS. E.g. <tt>$Revision: 1.8 $</tt></li>
+	like RCS or CVS. E.g. <tt>$Revision: 1.9 $</tt></li>
   </ul>
 
 
