--- a/help/sf.htm
+++ b/help/sf.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: bookmarks.htm,v 1.6 2002/03/04 08:44:05 robbod Exp $ -->
+<!-- $Id: sf.htm,v 1.1 2002/03/04 09:58:05 robbod Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   <td width="120">
     <h3 align="left">
       <b>Help</b><br/>
-      <small>$Revision: 1.6 $</small>
+      <small>$Revision: 1.1 $</small>
     </h3>
   </td>
   <td width="300" align="center">
@@ -43,8 +43,9 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   <li><a href="#email">Email exploder</a></li>
   <li><a href="#developer">Become a developer</a></li>
   <li><a href="#cvs">Getting started with CVS</a></li>
+  <li><a href="#release">Making a release</a></li>
 </ul>
-      
+<HR/>    
 <h2>
   <a name="stepmod">STEPmod Sourceforge project</a>
 </h2>
@@ -57,7 +58,7 @@ The Project Manager on Sourceforge is Josh Lubell
 (<a href="mailto:lubell@cme.nist.gov">lubell@cme.nist.gov</a>)
 </p>
  
-
+<HR/>
 <h2>
   <a name="email">Join email exploder</a>
 </h2>
@@ -66,6 +67,7 @@ repository and the modules themselves, join the STEPmod email exploder.
 <a href="http://lists.sourceforge.net/lists/listinfo/stepmod-devel">
 http://lists.sourceforge.net/lists/listinfo/stepmod-devel
 </a>
+<HR/>
 
 <h2>
   <a name="developer">Become a developer</a>
@@ -80,6 +82,7 @@ to be added as a project developer.
 href="http://sourceforge.net/projects/stepmod">http://sourceforge.net/projects/stepmod</a>
 and use the menu option on the 
 left "New User  via SSL"</p>
+<HR/>
 
 <h2>
   <a name="cvs">Getting started with CVS</a>
@@ -126,7 +129,63 @@ this.</P>
     <LI>Check out the repository - use the Admin-&gt;Command line <TT>cvs 
     -d:ext:username@cvs.stepmod.sourceforge.net:/cvsroot/stepmod co stepmod</TT> 
     </LI></OL></BLOCKQUOTE>
-<HR>
+<HR/>
+
+<h2>
+  <a name="release">Creating a release</a>
+</h2>
+To make a release, you should create a tag for the release in CVS, checkout
+the tagged reflease, zip it and upload it as a release to Sourceforge.
+<p>
+  For a Guide to the SourceForge.net File Release System (FRS) see:<br/>
+ <a href="http://sourceforge.net/docman/display_doc.php?docid=6445&group_id=1">http://sourceforge.net/docman/display_doc.php?docid=6445&group_id=1</a>
+</p>
+The process for making a release is:
+<ol>
+  <li> 
+  Update release notes stepmod/releasenotes/
+  and stepmod/help/releases.htm
+  </li>
+
+  <li>
+    Make sure everything is checked into CVS on SourceForge;
+  </li>
+
+  <li>
+    Tag a release in CVS <br/>
+  <code>cvs tag stepmod_2002-01-03 .</code><br/>
+  where stepmod_2002-01-03 is the tag for the release.
+  </li>
+
+  <li>
+    Export the release from CVS / SourceForge<br/>
+  <code>
+cvs -P -d:ext:robbod@cvs.stepmod.sourceforge.net:/cvsroot/stepmod export -r stepmod_2002-01-03 stepmod
+  </code><br/>
+  better to check out the release as it can then be safely updated<br/>
+  <code>
+cvs -P -d:ext:robbod@cvs.stepmod.sourceforge.net:/cvsroot/stepmod co stepmod
+  </code>
+
+  <li>
+    Zip release stepmod_2002-01-03
+  </li>
+
+  <li>
+    Upload zip file to file release system on SourceForge
+    <ul>
+      <li>FTP to upload.sourceforge.net </li>
+      <li>Login as "anonymous"</li>
+      <li>Use your e-mail address as the password for this login </li>
+      <li>Set your client to binary mode ("bin" on command-line clients)</li>
+      <li>Change your current directory to /incoming ("cd /incoming")</li>
+      <li>Upload the desired files for the release ("put filename")</li>
+    </ul>
+  </li>
+
+  <li>
+    Create a new release on SourceForge
+  </li>
 
 
 </BODY>
