Added info for making a release

--- a/help/sf.htm
+++ b/help/sf.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: sf.htm,v 1.1 2002/03/04 09:58:05 robbod Exp $ -->
+<!-- $Id: sf.htm,v 1.2 2002/03/04 16:26:14 robbod Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   <td width="120">
     <h3 align="left">
       <b>Help</b><br/>
-      <small>$Revision: 1.1 $</small>
+      <small>$Revision: 1.2 $</small>
     </h3>
   </td>
   <td width="300" align="center">
@@ -41,6 +41,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 <ul>
   <li><a href="#stepmod">STEPmod Sourceforge project</a></li>
   <li><a href="#email">Email exploder</a></li>
+  <li><a href="#xmlexplorer">Using XML and Internet Explorer</a></li>      
   <li><a href="#developer">Become a developer</a></li>
   <li><a href="#cvs">Getting started with CVS</a></li>
   <li><a href="#release">Making a release</a></li>
@@ -58,6 +59,15 @@ The Project Manager on Sourceforge is Josh Lubell
 (<a href="mailto:lubell@cme.nist.gov">lubell@cme.nist.gov</a>)
 </p>
  
+<HR/>
+
+<h2>
+<a name="xmlexplorer">Using XML and Internet Explorer</a>
+</h2>
+In order to view the XML with XSL stylesheets dynamically applied, it is
+suggested that Internet Explorer version 6 be used.
+
+
 <HR/>
 <h2>
   <a name="email">Join email exploder</a>
@@ -160,7 +170,7 @@ The process for making a release is:
   <li>
     Export the release from CVS / SourceForge<br/>
   <code>
-cvs -P -d:ext:robbod@cvs.stepmod.sourceforge.net:/cvsroot/stepmod export -r stepmod_2002-01-03 stepmod
+cvs -d :ext:stepmod:/cvsroot/stepmod export -r stepmod_2002-03-04 stepmod      
   </code><br/>
   better to check out the release as it can then be safely updated<br/>
   <code>
