Added description for getExpress

--- a/help/util.htm
+++ b/help/util.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: util.htm,v 1.9 2002/03/04 08:44:05 robbod Exp $ -->
+<!-- $Id: util.htm,v 1.10 2002/03/04 09:36:28 robbod Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <small>$Revision: 1.9 $</small>
+          <small>$Revision: 1.10 $</small>
         </h3>
       </td>
       <td width="300" align="center">
@@ -47,7 +47,9 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
     <li><a href="#xmlhtml">Generating HTML</a></li>
     <li><a href="#imagemap2xml">HTML image map to XML file</a></li>
     <li><a href="#express2xml">EXPRESS to XML</a></li>
-    <li><a href="#splitresource">Split integrated resource EXPRESS to schemas</a></li>
+    <li><a href="#splitresource">Split integrated resource EXPRESS to
+	schemas</a></li>
+    <li><a href="#exexpress">Extracting EXPRESS from repository</a></li>
   </ul>
   
   <h3><a name="create">Creating a module</a></h3>
@@ -63,7 +65,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   <code>stepmodHome</code> must be set in the Jscript <code>utils/mkmodule.js</code>.
 
   </p>
-  To create a new module, run (double click on it):
+  To create a new module ,
   <blockquote>
   <code>
     utils/mkmodule.wsf
@@ -353,5 +355,51 @@ directory in a file with the same name as the schema.
   </blockquote>
   where <code>&lt;express.exp&gt;</code> is the name of the EXPRESS file
 containing multiple schemas. 
+
+
+  <h3><a name="exexpress">Extracting EXPRESS from repository</a></h3>
+  The MIM and ARM EXPRESS for each module is stored in the repository as
+  mim.exp and arm.exp respectively.
+  <p>
+    When generating a long form, it is useful to collect all the EXPRESS
+    into a single directory with each EXPRESS file being given the name of
+    the schema that it contains.
+  </p>
+  <p>
+    The Windows Script Host file: <code>utils/getExpress.wsf</code> can be
+    used to extract all the EXPRESS to a named directory. 
+  </p>
+  <p>
+    Note: the script reads the list of modules and integarted resource
+    schemata from 
+    <a href="../repository_index.xml"><code>repository_index.xml</code></a>
+  </p>
+  <p>
+    To run double click on it <code>utils/getExpress.wsf</code><br/>
+  It will prompt for the name of the directory.
+  </p>
+  <p>
+    Given the name of a new directory,&lt;dir&gt; three sub
+    directories will be created:
+  </p>
+  <ul>
+    <li>
+      <code>&lt;dir&gt;/arm</code> - the ARM express
+    </li>
+    <li>
+      <code>&lt;dir&gt;/mim</code> - the MIM express
+    </li>
+    <li>
+      <code>&lt;dir&gt;/resources</code> - the Integrated resources express
+    </li>
+  </ul>
+  <p>
+    All the ARM, MIM and Integrated Resource EXPRESS will be copied
+    from the repository renaming each EXPRESS file to be the same
+    as the schema it contains and storing it in the relevant
+    directory.
+  </p>
+
+
   </BODY>
 </HTML>
