--- a/help/index.htm
+++ b/help/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: index.htm,v 1.8 2002/03/04 08:44:05 robbod Exp $ -->
+<!-- $Id: index.htm,v 1.9 2002/03/04 09:36:28 robbod Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <small>$Revision: 1.8 $</small>
+          <small>$Revision: 1.9 $</small>
         </h3>
       </td>
       <td width="300" align="center">
@@ -110,7 +110,9 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 	  <li><a href="util.htm#xmlhtml">Generating HTML</a></li>
 	  <li><a href="util.htm#imagemap2xml">HTML image map to XML file</a></li>
 	  <li><a href="util.htm#express2xml">EXPRESS to XML</a></li>
-	  <li><a href="util.htm#splitresource">Split integrated resource EXPRESS to schemas</a></li>
+	  <li><a href="util.htm#splitresource">Split integrated resource
+	      EXPRESS to schemas</a></li>
+          <li><a href="util.htm#exexpress">Extracting EXPRESS from repository</a></li>
   </ul>
 
     </ul>
